# GPG-Bulk-File-Management

./: .gitignore  README.md
SourceCode/: gpg_files_bulk_manage.py  pyproject.toml  requirements.txt
